.: Spell-checking doesn't recognize word boundaries on contests inserted by execCommand('insertHTML') https://bugs.webkit.org/show_bug.cgi?id=65902

Reviewed by Ryosuke Niwa.

Add export for window.internals object.

* Source/autotools/symbols.filter:

Source/WebCore: Spell-checking doesn't recognize word boundaries on contests inserted by execCommand('insertHTML')
https://bugs.webkit.org/show_bug.cgi?id=65902

Reviewed by Ryosuke Niwa.

markMisspellingsAndBadGrammar() was using markSpelling() and markBadGrammar().
But these are low-level API and caller should take care of word boundary.
This change replaced these call with overloaded version of markMisspellingsAndBadGrammar(),
which handles word boundary correctly.

Test: editing/spelling/spelling-insert-html.html

* WebCore.exp.in:
* editing/Editor.cpp:
(WebCore::Editor::markMisspellingsAndBadGrammar):
* testing/Internals.cpp:
(WebCore::Internals::markerCountOf): Added.
(WebCore::Internals::markedRangeAt): Added.
* testing/Internals.h:
* testing/Internals.idl:

Source/WebKit2: Spell-checking against execCommand() inserted HTML doesn't care word boundary.
https://bugs.webkit.org/show_bug.cgi?id=65902

Reviewed by Ryosuke Niwa.

Add exports for window.internals object.

* win/WebKit2.def:
* win/WebKit2CFLite.def:

LayoutTests: Spell-checking doesn't recognize word boundaries on contests inserted by execCommand('insertHTML')
https://bugs.webkit.org/show_bug.cgi?id=65902

Reviewed by Ryosuke Niwa.

Existing expectation was wrong because of some markers on substrings of words.
With this fix, Editor now rejects such markers.

* editing/spelling/spelling-insert-html-expected.txt: Added.
* editing/spelling/spelling-insert-html.html: Added.
* platform/mac/editing/pasteboard/merge-after-delete-1-expected.png:
* platform/mac/editing/pasteboard/merge-after-delete-2-expected.png:
* platform/mac/editing/pasteboard/merge-after-delete-expected.png:
* platform/mac/editing/pasteboard/merge-end-blockquote-expected.png:
* platform/mac/editing/pasteboard/merge-end-list-expected.png:
* platform/mac/editing/pasteboard/merge-end-table-expected.png:
* platform/mac/editing/pasteboard/paste-text-008-expected.png:


Canonical link: https://commits.webkit.org/82382@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93392 268f45cc-cd09-0410-ab3c-d52691b4dbfc